--- a/Index.html
+++ b/Index.html
@@ -85,7 +85,7 @@
             <h2>Properties</h2>
             <div id="property-slider" class="slick">
                 <!-- <div>
-                    <img src="./Property-1.avif" alt="Property 1" />
+                    <img src="./Images/Property-1.avif" alt="Property 1" />
                     <div class="property-details">
                         <p class="price">$3,400,000</p>
                     </div>
@@ -95,7 +95,7 @@
                     <address>Melbourne VIC, Australia</address>
                 </div>
                 <div>
-                    <img src="./Property-2.avif" alt="Property 1" />
+                    <img src="./Images/Property-2.avif" alt="Property 1" />
                     <div class="property-details">
                         <p class="price">$3,400,000</p>
                     </div>
@@ -105,7 +105,7 @@
                     <address>Melbourne VIC, Australia</address>
                 </div>
                 <div>
-                    <img src="./Property-3.avif" alt="Property 1" />
+                    <img src="./Images/Property-3.avif" alt="Property 1" />
                     <div class="property-details">
                         <p class="price">$3,400,000</p>
                     </div>
@@ -115,7 +115,7 @@
                     <address>Melbourne VIC, Australia</address>
                 </div> -->
                 <!-- <div>
-                    <img src="./Property-4.avif" alt="Property 1" />
+                    <img src="./Images/Property-4.avif" alt="Property 1" />
                     <div class="property-details">
                         <p class="price">$3,400,000</p>
                     </div>
@@ -125,7 +125,7 @@
                     <address>Melbourne VIC, Australia</address>
                 </div> -->
                 <div>
-                    <img src="./Property-5.avif" alt="Property 1" />
+                    <img src="./Images/Property-5.avif" alt="Property 1" />
                     <div class="property-details">
                         <p class="price">$3,400,000</p>
                     </div>
@@ -135,7 +135,7 @@
                     <address>Melbourne VIC, Australia</address>
                 </div>
                 <div>
-                    <img src="./Property-6.avif" alt="Property 1" />
+                    <img src="./Images/Property-6.avif" alt="Property 1" />
                     <div class="property-details">
                         <p class="price">$3,400,000</p>
                     </div>
@@ -158,47 +158,47 @@
             </p>
             <div class="flex">
                 <!-- <div class="card">
-                    <img src="./Agent-1.jpg" alt="Agent1" />
+                    <img src="./Images/Agent-1.jpg" alt="Agent1" />
                     <h3>Yash Ahuja</h3>
                     <p>Real Estate Agent</p>
                 </div>
                 <div class="card">
-                    <img src="./Agent-2.jpg" alt="Agent1" />
+                    <img src="./Images/Agent-2.jpg" alt="Agent1" />
                     <h3>Sarthak Sharma</h3>
                     <p>Real Estate Agent</p>
                 </div>
                 <div class="card">
-                    <img src="./Agent-3.jpg" alt="Agent1" />
+                    <img src="./Images/Agent-3.jpg" alt="Agent1" />
                     <h3>Satyam Srivastav</h3>
                     <p>Real Estate Agent</p>
                 </div> -->
                 <div class="card">
-                    <img src="./Agent-4.jpg" alt="Agent1" />
+                    <img src="./Images/Agent-4.jpg" alt="Agent1" />
                     <h3>Shikhar Shukla</h3>
                     <p>Real Estate Agent</p>
                 </div>
                 <div class="card">
-                    <img src="./Agent-5.jpg" alt="Agent1" />
+                    <img src="./Images/Agent-5.jpg" alt="Agent1" />
                     <h3>Rajat Arora</h3>
                     <p>Real Estate Agent</p>
                 </div>
                 <div class="card">
-                    <img src="./Agent-6.jpg" alt="Agent1" />
+                    <img src="./Images/Agent-6.jpg" alt="Agent1" />
                     <h3>Anupriya Saxena</h3>
                     <p>Real Estate Agent</p>
                 </div>
                 <div class="card">
-                    <img src="./Agent-7.jpg" alt="Agent1" />
+                    <img src="./Images/Agent-7.jpg" alt="Agent1" />
                     <h3>Rashimak Ahuja</h3>
                     <p>Real Estate Agent</p>
                 </div>
                 <div class="card">
-                    <img src="./Agent-8.jpg" alt="Agent1" />
+                    <img src="./Images/Agent-8.jpg" alt="Agent1" />
                     <h3>Sakshi Malik</h3>
                     <p>Real Estate Agent</p>
                 </div>
                 <div class="card">
-                    <img src="./Agent-9.jpg" alt="Agent1" />
+                    <img src="./Images/Agent-9.jpg" alt="Agent1" />
                     <h3>Shraddha gupta</h3>
                     <p>Real Estate Agent</p>
                 </div>
@@ -208,7 +208,7 @@
 
     <section id="the-best">
         <div class="flex container">
-            <img src="./Property-7.avif" alt="Property-7" />
+            <img src="./Images/Property-7.avif" alt="Property-7" />
             <div>
                 <h2>We Are The Best Real Estate Company</h2>
                 <p class="large-paragraph">
@@ -310,7 +310,7 @@
                         ex dolores perspiciatis! Molestiae, officia nesciunt?
                     </blockquote>
                     <div class="testimonial-caption">
-                        <img src="./Client-1.jpg" alt="Client-1" />
+                        <img src="./Images/Client-1.jpg" alt="Client-1" />
                     </div>
                     <p>Larry Underwood</p>
                 </div>
@@ -323,7 +323,7 @@
                         ex dolores perspiciatis! Molestiae, officia nesciunt?
                     </blockquote>
                     <div class="testimonial-caption">
-                        <img src="./Client-1.jpg" alt="Client-2" />
+                        <img src="./Images/Client-1.jpg" alt="Client-2" />
                         <p>Nick Andrew</p>
                     </div>
                 </div>
@@ -336,7 +336,7 @@
                         ex dolores perspiciatis! Molestiae, officia nesciunt?
                     </blockquote>
                     <div class="testimonial-caption">
-                        <img src="./Client-1.jpg" alt="Client-3" />
+                        <img src="./Images/Client-1.jpg" alt="Client-3" />
                     </div>
                     <p>Dwayne Johnson</p>
                 </div>
